Add missing add-exports