@@ -367,6 +367,7 @@ def createCheckTypeTask(projectName, taskName, checker, args = []) {
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
@@ -893,7 +894,13 @@ subprojects {
                 jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}".toString()
             } else {
                 jvmArgs += [
-                        "--illegal-access=warn",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                         "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                 ]
             }
